osdocs5094 changing whitelist and blacklist references to allow and deny

--- a/modules/creating-nfd-cr-cli-disconnected.adoc
+++ b/modules/creating-nfd-cr-cli-disconnected.adoc
@@ -75,7 +75,7 @@ spec:
   workerConfig:
     configData: |
       core:
-      #  labelWhiteList:
+      #  labelAllow:
       #  noPublish: false
         sleepInterval: 60s
       #  sources: [all]
@@ -97,8 +97,8 @@ spec:
       sources:
         cpu:
           cpuid:
-      #     NOTE: whitelist has priority over blacklist
-            attributeBlacklist:
+      #     NOTE: allow has priority over deny
+            attributeDeny:
               - "BMI1"
               - "BMI2"
               - "CLMUL"
@@ -122,7 +122,7 @@ spec:
               - "SSE4.1"
               - "SSE4.2"
               - "SSSE3"
-            attributeWhitelist:
+            attributeAllow:
         kernel:
           kconfigFile: "/path/to/kconfig"
           configOpts:
@@ -130,7 +130,7 @@ spec:
             - "X86"
             - "DMI"
         pci:
-          deviceClassWhitelist:
+          deviceClassAllow:
             - "0200"
             - "03"
             - "12"
