--- a/modules/creating-nfd-cr-cli.adoc
+++ b/modules/creating-nfd-cr-cli.adoc
@@ -43,7 +43,7 @@ spec:
   workerConfig:
     configData: |
       core:
-      #  labelWhiteList:
+      #  labelAllow:
       #  noPublish: false
         sleepInterval: 60s
       #  sources: [all]
@@ -65,8 +65,8 @@ spec:
       sources:
         cpu:
           cpuid:
-      #     NOTE: whitelist has priority over blacklist
-            attributeBlacklist:
+      #     NOTE: allow has priority over deny
+            attributeAllow:
               - "BMI1"
               - "BMI2"
               - "CLMUL"
@@ -90,7 +90,7 @@ spec:
               - "SSE4.1"
               - "SSE4.2"
               - "SSSE3"
-            attributeWhitelist:
+            attributeAllow:
         kernel:
           kconfigFile: "/path/to/kconfig"
           configOpts:
@@ -98,7 +98,7 @@ spec:
             - "X86"
             - "DMI"
         pci:
-          deviceClassWhitelist:
+          deviceClassAllow:
             - "0200"
             - "03"
             - "12"
