--- a/modules/images-configuration-parameters-hcp.adoc
+++ b/modules/images-configuration-parameters-hcp.adoc
@@ -39,5 +39,5 @@ Parameters such as `DisableScheduledImport`, `MaxImagesBulkImportedPerRepository
 
 [WARNING]
 ====
-When the `allowedRegistries` parameter is defined, all registries are blocked unless explicitly listed. To prevent pod failure, a list of Red{nbsp}Hat registries is automatically whitelisted, as they are required by payload images within your environment. The current list consists of `image-registry.openshift-image-registry.svc:5000,quay.io,registry.redhat.io` and it is also visible when running the `rosa describe cluster` command.
+When the `allowedRegistries` parameter is defined, all registries are blocked unless explicitly listed. To prevent pod failure, a list of Red{nbsp}Hat registries is automatically allowed, as they are required by payload images within your environment. The current list consists of `image-registry.openshift-image-registry.svc:5000,quay.io,registry.redhat.io` and it is also visible when running the `rosa describe cluster` command.
 ====
