--- a/modules/ldap-syncing-nesting.adoc
+++ b/modules/ldap-syncing-nesting.adoc
@@ -11,7 +11,7 @@ membership before the data can be consumed. Microsoft's Active Directory Server
 supports this feature via the
 link:https://msdn.microsoft.com/en-us/library/aa746475(v=vs.85).aspx[`LDAP_MATCHING_RULE_IN_CHAIN`]
 rule, which has the OID `1.2.840.113556.1.4.1941`. Furthermore, only explicitly
-whitelisted groups can be synced when using this matching rule.
+allowed groups can be synced when using this matching rule.
 
 This section has an example for the augmented Active Directory schema, which
 synchronizes a group named `admins` that has one user `Jane` and one group
@@ -85,7 +85,7 @@ definition for both user entries and group entries, as well as the attributes
 with which to represent them in the internal {product-title} group records.
 Furthermore, certain changes are required in this configuration:
 
-- The `oc adm groups sync` command must explicitly whitelist groups.
+- The `oc adm groups sync` command must explicitly allow groups.
 - The user's `groupMembershipAttributes` must include
 `"memberOf:1.2.840.113556.1.4.1941:"` to comply with the
 https://msdn.microsoft.com/en-us/library/aa746475(v=vs.85).aspx[`LDAP_MATCHING_RULE_IN_CHAIN`]
@@ -157,7 +157,7 @@ $ oc adm groups sync \
 +
 [NOTE]
 ====
-You must explicitly whitelist the `cn=admins,ou=groups,dc=example,dc=com` group.
+You must explicitly allow the `cn=admins,ou=groups,dc=example,dc=com` group.
 ====
 +
 {product-title} creates the following group record as a result of the above sync
