--- a/modules/ldap-syncing-rfc2307-user-defined-error.adoc
+++ b/modules/ldap-syncing-rfc2307-user-defined-error.adoc
@@ -105,7 +105,7 @@ rfc2307:
 ----
 <1> The attribute that uniquely identifies a user on the LDAP server. You
 cannot specify `usersQuery` filters when using DN for userUIDAttribute. For
-fine-grained  filtering, use the whitelist / blacklist method.
+fine-grained  filtering, use the allow / deny method.
 <2> When `true`, the sync job tolerates groups for which some members were not
 found, and members whose LDAP entries are not found are ignored. The
 default behavior for the sync job is to fail if a member of a group is not
