--- a/modules/ldap-syncing-rfc2307-user-defined.adoc
+++ b/modules/ldap-syncing-rfc2307-user-defined.adoc
@@ -38,12 +38,12 @@ rfc2307:
 <1> The user-defined name mapping.
 <2> The unique identifier attribute that is used for the keys in the
 user-defined name mapping. You cannot specify `groupsQuery` filters when using
-DN for groupUIDAttribute. For fine-grained filtering, use the whitelist / blacklist method.
+DN for groupUIDAttribute. For fine-grained filtering, use the allow / deny method.
 <3> The attribute to name {product-title} groups with if their unique identifier is
 not in the user-defined name mapping.
 <4> The attribute that uniquely identifies a user on the LDAP server. You
 cannot specify `usersQuery` filters when using DN for userUIDAttribute. For
-fine-grained  filtering, use the whitelist / blacklist method.
+fine-grained  filtering, use the allow / deny method.
 
 .Prerequisites
 
