--- a/modules/ldap-syncing-running-subset.adoc
+++ b/modules/ldap-syncing-running-subset.adoc
@@ -6,14 +6,14 @@
 [id="ldap-syncing-running-subset_{context}"]
 = Syncing subgroups from the LDAP server with {product-title}
 
-You can sync a subset of LDAP groups with {product-title} using whitelist files,
+You can sync a subset of LDAP groups with {product-title} using allow files,
 blacklist files, or both.
 
 [NOTE]
 ====
-You can use any combination of blacklist files, whitelist files, or whitelist
-literals. Whitelist and blacklist files must contain one unique group identifier
-per line, and you can include whitelist literals directly in the command itself.
+You can use any combination of deny files, allow files, or allow
+literals. allow and deny files must contain one unique group identifier
+per line, and you can include allow literals directly in the command itself.
 These guidelines apply to groups found on LDAP servers as well as groups already
 present in {product-title}.
 ====
@@ -34,7 +34,7 @@ endif::openshift-dedicated,openshift-rosa[]
 +
 [source,terminal]
 ----
-$ oc adm groups sync --whitelist=<whitelist_file> \
+$ oc adm groups sync --allow=<allow_file> \
                    --sync-config=config.yaml      \
                    --confirm
 ----
@@ -56,7 +56,7 @@ $ oc adm groups sync <group_unique_identifier>    \
 [source,terminal]
 ----
 $ oc adm groups sync <group_unique_identifier>  \
-                   --whitelist=<whitelist_file> \
+                   --allow=<allow_file> \
                    --blacklist=<blacklist_file> \
                    --sync-config=config.yaml    \
                    --confirm
@@ -65,7 +65,7 @@ $ oc adm groups sync <group_unique_identifier>  \
 [source,terminal]
 ----
 $ oc adm groups sync --type=openshift           \
-                   --whitelist=<whitelist_file> \
+                   --allow=<allow_file> \
                    --sync-config=config.yaml    \
                    --confirm
 ----
