--- a/modules/microshift-gitops-adding-apps.adoc
+++ b/modules/microshift-gitops-adding-apps.adoc
@@ -27,7 +27,7 @@ metadata:
   name: default
   namespace: openshift-gitops
 spec:
-  clusterResourceWhitelist:
+  clusterResourceAllow:
   - group: '*'
     kind: '*'
   destinations:
