--- a/modules/pruning-groups.adoc
+++ b/modules/pruning-groups.adoc
@@ -27,8 +27,8 @@ $ oc adm prune groups \
 .^|`--blacklist`
 |Path to the group blacklist file.
 
-.^|`--whitelist`
-|Path to the group whitelist file.
+.^|`--allow`
+|Path to the group allow file.
 
 .^|`--sync-config`
 |Path to the synchronization configuration file.
