--- a/modules/psap-configuring-node-feature-discovery.adoc
+++ b/modules/psap-configuring-node-feature-discovery.adoc
@@ -47,14 +47,14 @@ core:
 ----
 
 [discrete]
-[id="configuring-node-feature-discovery-operator-core-label-whitelist_{context}"]
-=== core.labelWhiteList
+[id="configuring-node-feature-discovery-operator-core-label-allow_{context}"]
+=== core.labelallow
 
-`core.labelWhiteList` specifies a regular expression for filtering feature labels based on the label name. Non-matching labels are not published.
+`core.labelallow` specifies a regular expression for filtering feature labels based on the label name. Non-matching labels are not published.
 
 The regular expression is only matched against the basename part of the label, the part of the name after '/'. The label prefix,  or namespace, is omitted.
 
-This value is overridden by the deprecated `--label-whitelist` command line flag, if specified.
+This value is overridden by the deprecated `--label-allow` command line flag, if specified.
 
 Default: `null`
 
@@ -62,7 +62,7 @@ Default: `null`
 [source,yaml]
 ----
 core:
-  labelWhiteList: '^cpu-cpuid'
+  labelallow: '^cpu-cpuid'
 ----
 
 [discrete]
@@ -222,7 +222,7 @@ The `sources` section contains feature source specific configuration parameters.
 
 Prevent publishing `cpuid` features listed in this option.
 
-This value is overridden by `sources.cpu.cpuid.attributeWhitelist`, if specified.
+This value is overridden by `sources.cpu.cpuid.attributeAllow`, if specified.
 
 Default: `[BMI1, BMI2, CLMUL, CMOV, CX16, ERMS, F16C, HTT, LZCNT, MMX, MMXEXT, NX, POPCNT, RDRAND, RDSEED, RDTSCP, SGX, SGXLC, SSE, SSE2, SSE3, SSE4.1, SSE4.2, SSSE3]`
 
@@ -236,12 +236,12 @@ sources:
 ----
 
 [discrete]
-[id="configuring-node-feature-discovery-operator-sources-cpu-cpuid-attributeWhitelist_{context}"]
-=== sources.cpu.cpuid.attributeWhitelist
+[id="configuring-node-feature-discovery-operator-sources-cpu-cpuid-attributeAllow_{context}"]
+=== sources.cpu.cpuid.attributeAllow
 
 Only publish the `cpuid` features listed in this option.
 
-`sources.cpu.cpuid.attributeWhitelist` takes precedence over `sources.cpu.cpuid.attributeBlacklist`.
+`sources.cpu.cpuid.attributeAllow` takes precedence over `sources.cpu.cpuid.attributeBlacklist`.
 
 Default: *empty*
 
@@ -251,7 +251,7 @@ Default: *empty*
 sources:
   cpu:
     cpuid:
-      attributeWhitelist: [AVX512BW, AVX512CD, AVX512DQ, AVX512F, AVX512VL]
+      attributeAllow: [AVX512BW, AVX512CD, AVX512DQ, AVX512F, AVX512VL]
 ----
 
 [discrete]
@@ -287,10 +287,10 @@ sources:
 ----
 
 [discrete]
-[id="configuring-node-feature-discovery-operator-sources-pci-deviceClassWhitelist_{context}"]
-=== sources.pci.deviceClassWhitelist
+[id="configuring-node-feature-discovery-operator-sources-pci-deviceClassAllow_{context}"]
+=== sources.pci.deviceClassAllow
 
-`sources.pci.deviceClassWhitelist` is a list of link:https://pci-ids.ucw.cz/read/PD[PCI device class IDs] for which to publish a label. It can be specified as a main class only (for example, `03`) or full class-subclass combination (for example `0300`). The former implies that all
+`sources.pci.deviceClassAllow` is a list of link:https://pci-ids.ucw.cz/read/PD[PCI device class IDs] for which to publish a label. It can be specified as a main class only (for example, `03`) or full class-subclass combination (for example `0300`). The former implies that all
 subclasses are accepted.  The format of the labels can be further configured with `deviceLabelFields`.
 
 Default: `["03", "0b40", "12"]`
@@ -300,7 +300,7 @@ Default: `["03", "0b40", "12"]`
 ----
 sources:
   pci:
-    deviceClassWhitelist: ["0200", "03"]
+    deviceClassAllow: ["0200", "03"]
 ----
 
 [discrete]
@@ -322,10 +322,10 @@ sources:
 With the example config above, NFD would publish labels such as `feature.node.kubernetes.io/pci-<class-id>_<vendor-id>_<device-id>.present=true`
 
 [discrete]
-[id="configuring-node-feature-discovery-operator-sources-usb-deviceClassWhitelist_{context}"]
-=== sources.usb.deviceClassWhitelist
+[id="configuring-node-feature-discovery-operator-sources-usb-deviceClassAllow_{context}"]
+=== sources.usb.deviceClassAllow
 
-`sources.usb.deviceClassWhitelist` is a list of USB link:https://www.usb.org/defined-class-codes[device class] IDs for
+`sources.usb.deviceClassAllow` is a list of USB link:https://www.usb.org/defined-class-codes[device class] IDs for
 which to publish a feature label. The format of the labels can be further
 configured with `deviceLabelFields`.
 
@@ -336,7 +336,7 @@ Default: `["0e", "ef", "fe", "ff"]`
 ----
 sources:
   usb:
-    deviceClassWhitelist: ["ef", "ff"]
+    deviceClassAllow: ["ef", "ff"]
 ----
 
 [discrete]
