--- a/modules/security-network-egress.adoc
+++ b/modules/security-network-egress.adoc
@@ -6,7 +6,7 @@
 =  Securing egress traffic
 
 {product-title} provides the ability to control egress traffic using either
-a router or firewall method. For example, you can use IP whitelisting to control
+a router or firewall method. For example, you can use IP allowing to control
 database access.
 A cluster administrator can assign one or more egress IP addresses to a project by xref:../../networking/ovn_kubernetes_network_provider/configuring-egress-ips-ovn.adoc#configuring-egress-ips-ovn[configuring an egress IP address].
 Likewise, a cluster administrator can prevent egress traffic from
