--- a/cloud_experts_tutorials/cloud-experts-getting-started/cloud-experts-getting-started-openshift-concepts.adoc
+++ b/cloud_experts_tutorials/cloud-experts-getting-started/cloud-experts-getting-started-openshift-concepts.adoc
@@ -88,7 +88,7 @@ Similar to the Kubernetes `Ingress` object, Red Hat created the concept of route
 | **X**
 | **X**
 
-|IP whitelisting
+|IP allowing
 | **X**
 | **X**
 
