--- a/modules/identity-provider-ldap-CR.adoc
+++ b/modules/identity-provider-ldap-CR.adoc
@@ -67,7 +67,7 @@ URLs always attempt to connect using TLS.
 
 [NOTE]
 ====
-To whitelist users for an LDAP integration, use the `lookup` mapping method.
+To allow users for an LDAP integration, use the `lookup` mapping method.
 Before a login from LDAP would be allowed, a cluster administrator must create
 an `Identity` object and a `User` object for each LDAP user.
 ====
