--- a/modules/ldap-syncing-config-augmented-activedir.adoc
+++ b/modules/ldap-syncing-config-augmented-activedir.adoc
@@ -41,7 +41,7 @@ augmentedActiveDirectory:
 ----
 <1> The attribute that uniquely identifies a group on the LDAP server. You
 cannot specify `groupsQuery` filters when using DN for groupUIDAttribute. For
-fine-grained filtering, use the whitelist / blacklist method.
+fine-grained filtering, use the allow / deny method.
 <2> The attribute to use as the name of the group.
 <3> The attribute to use as the name of the user in the {product-title} group record.
 <4> The attribute on the user that stores the membership information.
