--- a/modules/ldap-syncing-config-rfc2307.adoc
+++ b/modules/ldap-syncing-config-rfc2307.adoc
@@ -54,10 +54,10 @@ LDAP (`ldaps://`) URLs connect using TLS, and insecure LDAP (`ldap://`) URLs are
 upgraded to TLS. When `true`, no TLS connection is made to the server and you cannot use `ldaps://` URL schemes.
 <3> The attribute that uniquely identifies a group on the LDAP server.
 You cannot specify `groupsQuery` filters when using DN for `groupUIDAttribute`.
-For fine-grained filtering, use the whitelist / blacklist method.
+For fine-grained filtering, use the allow / deny method.
 <4> The attribute to use as the name of the group.
 <5> The attribute on the group that stores the membership information.
 <6> The attribute that uniquely identifies a user on the LDAP server. You
 cannot specify `usersQuery` filters when using DN for userUIDAttribute. For
-fine-grained  filtering, use the whitelist / blacklist method.
+fine-grained  filtering, use the allow / deny method.
 <7> The attribute to use as the name of the user in the {product-title} group record.
