--- a/modules/ldap-syncing-pruning.adoc
+++ b/modules/ldap-syncing-pruning.adoc
@@ -7,7 +7,7 @@
 
 An administrator can also choose to remove groups from {product-title} records
 if the records on the LDAP server that created them are no longer present. The
-prune job will accept the same sync configuration file and whitelists or blacklists
+prune job will accept the same sync configuration file and allows or denies
 as used for the sync job.
 
 For example:
@@ -19,7 +19,7 @@ $ oc adm prune groups --sync-config=/path/to/ldap-sync-config.yaml --confirm
 
 [source,terminal]
 ----
-$ oc adm prune groups --whitelist=/path/to/whitelist.txt --sync-config=/path/to/ldap-sync-config.yaml --confirm
+$ oc adm prune groups --allow=/path/to/allow.txt --sync-config=/path/to/ldap-sync-config.yaml --confirm
 ----
 
 [source,terminal]
