--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -65,6 +65,9 @@ This release adds new features and enhancements related to the following compone
 
 * Configuring xref:../../virt/nodes/virt-node-maintenance.adoc#eviction-strategies[VM eviction strategies] for an xref:../../virt/nodes/virt-node-maintenance.adoc#virt-configuring-cluster-eviction-strategy-cli_virt-node-maintenance[entire cluster] is now generally available.
 
+//CNV-39964 GA: inferFromVolume
+* The `inferFromVolume` attribute is now supported for use with imported container disks. When requested, {VirtProductName} can copy the labels `instancetype.kubevirt.io/default-instancetype` and `instancetype.kubevirt.io/default-preference` from a source container disk to the boot volume of a new VM.
+
 [id="virt-4-17-virtualization"]
 === Virtualization
 
