tech review comments incorporated

--- a/backup_and_restore/application_backup_and_restore/oadp-performance/oadp-recommended-network-settings.adoc
+++ b/backup_and_restore/application_backup_and_restore/oadp-performance/oadp-recommended-network-settings.adoc
@@ -12,10 +12,10 @@ For a supported experience with {oadp-first}, you should have a stable and resil
 
 To ensure successful backup and restore operations, Red Hat recommends that your network settings meet the following minimum requirements:
 
-* Bandwidth: Greater than 2 MB
+* Bandwidth (network upload speed to object storage): Greater than 2 Mbps for small backups and 10-100 Mbps depending on the data volume for larger backups.
 * Packet loss: Range 1% to 5%
 * Packet corruption: Range 1% to 5%
-* Latency: Range 100ms (±20ms)
+* Latency (Jitter): Range 100ms (±20ms)
 
 [IMPORTANT]
 ====
