OCPBUGS-36533: Removed discrete tags from 4.16 RN new features

--- a/release_notes/ocp-4-16-release-notes.adoc
+++ b/release_notes/ocp-4-16-release-notes.adoc
@@ -331,7 +331,6 @@ xref:../installing/installing_ibm_z/preparing-to-install-on-ibm-z.adoc#preparing
 Compute nodes must run {op-system-first}.
 ====
 
-[discrete]
 [id="ocp-4-16-ibm-z-enhancements_{context}"]
 ==== {ibm-z-title} and {ibm-linuxone-title} notable enhancements
 
@@ -357,7 +356,6 @@ This release introduces support for the following features on {ibm-z-name} and {
 Compute nodes must run {op-system-first}.
 ====
 
-[discrete]
 [id="ocp-4-16-ibm-power-enhancements_{context}"]
 ==== {ibm-power-title} notable enhancements
 
@@ -368,9 +366,8 @@ This release introduces support for the following features on {ibm-power-name}:
 * CPU manager
 * Ingress Node Firewall Operator
 
-[discrete]
 [id="ocp-4-16-ibm-z-power-support-matrix_{context}"]
-=== {ibm-power-title}, {ibm-z-title}, and {ibm-linuxone-title} support matrix
+==== {ibm-power-title}, {ibm-z-title}, and {ibm-linuxone-title} support matrix
 
 Starting in {product-title} 4.14, Extended Update Support (EUS) is extended to the {ibm-power-name} and the {ibm-z-name} platform. For more information, see the link:https://access.redhat.com/support/policy/updates/openshift-eus[OpenShift EUS Overview].
 
@@ -1033,7 +1030,6 @@ For more information, see xref:../operators/olm_v1/olmv1-installing-an-operator-
 [id="ocp-4-16-builds_{context}"]
 === Builds
 
-[discrete]
 [id="ocp-4-16-unauthenticated-users-system-webhook-role-binding_{context}"]
 ==== Unauthenticated users were removed from the system:webhook role binding
 
@@ -1309,9 +1305,11 @@ A new signer certificate authority (CA), `openshift-etcd`, is now available to s
 //=== Cloud controller managers for additional cloud providers
 //
 
+:sectids:
 [discrete]
 [id="ocp-4-16-HAProxy-version_{context}"]
 === HAProxy version 2.8
+:!sectids:
 
 {product-title} {product-version} uses HAProxy 2.8.
 
